# Timely

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  CHANGELOG.md  FRONTEND_ARCHITECTURE.md  LICENSE  README.md  app.html  index.html  package-lock.json  package.json  react-doctor.config.json  skills-lock.json  tray.html  tsconfig.json  vite.config.ts
.agents/skills/frontend-architecture/: SKILL.md
.agents/skills/timely-clay-ui/: SKILL.md
.agents/skills/timely-design-system/: SKILL.md
.agents/skills/timely-release-manager/: SKILL.md
.github/: RELEASE.md
.github/workflows/: ci-release.yml
docs/plans/: 2026-03-06-multi-provider-time-tracker-design.md  2026-03-10-worklog-date-controls-design.md  2026-03-10-worklog-grid-stagger-design.md  2026-03-10-worklog-period-picker-design.md
scripts/: check-frontend-architecture.cjs  generate-holidays-data.cjs  gitlab-sprint-timelogs.sh  publish-updater-manifest.cjs
src/: main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs  tray.rs
src-tauri/src/auth/: mod.rs
src-tauri/src/commands/: auth.rs  dashboard.rs  gitlab_hub.rs  issues.rs  mod.rs  updates.rs
src-tauri/src/db/: bootstrap.rs  connection.rs  iteration_catalog.rs  mod.rs  oauth.rs  seed.rs  sync.rs
src-tauri/src/domain/: models.rs
src-tauri/src/providers/: gitlab.rs  mod.rs  youtrack.rs
src-tauri/src/services/: assigned_issues.rs  auth.rs  dashboard.rs  diagnostics.rs  issues.rs  localization.rs  mod.rs  play.rs  preferences.rs  reminder_messages.rs  reminders.rs  shared.rs  streak.rs  sync.rs  worklog.rs
src-tauri/src/support/: badge_tone_mapper.rs  holidays-data.json  holidays.rs  iteration_label.rs  logging.rs  mod.rs  time.rs  url.rs
src-tauri/templates/linux/: timely.desktop.hbs
src/app/: App.test.tsx  App.tsx  loading-states.tsx  setup-routes.tsx
src/bones/: registry.ts
src/components/layout/: nav-rail.tsx  top-bar.tsx
src/components/shared/: about-dialog.tsx  empty-state.test.tsx  (+12 more)
src/entry/: app-entry.tsx  tray-entrypoint.tsx
src/hooks/: use-bootstrap.ts  use-format-hours.ts  use-notify.ts  use-theme.test.ts  use-theme.ts
src/lib/: animations.ts  boot-timing.ts  build-info.ts  companion.test.ts  companion.ts  control-styles.ts  i18n.test.tsx  i18n.tsx  load-fonts.ts  mock-data.ts  motion.test.tsx  motion.tsx  preferences-cache.ts  release-highlights.ts  startup-app-state.ts  startup-prefs.ts  tauri.test.ts  tauri.ts  timezone-country-map.ts  utils.test.ts  utils.ts
src/stores/: app-store.test.ts  app-store.ts
src/styles/: globals.css
src/test/: setup.ts
src/types/: dashboard.ts
unstable/: latest.json
(+820 files in other folders)
