[package]
name = "timely"
version = "0.1.0-beta.11"
description = "Local-first multi-provider desktop time tracker"
authors = ["OpenCode"]
edition = "2021"

[lib]
name = "timely_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
sha2 = "0.10"
tauri = { version = "2.10.3", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-deep-link = "2.4.7"
tauri-plugin-opener = "2.5.3"
thiserror = "2"
tiny-skia = "0.11"
tokio = { version = "1", features = ["rt", "time"] }
url = "2"
urlencoding = "2"
tauri-plugin-notification = "2"
chrono-tz = "0.10"
sys-locale = "0.3"
notify-rust = "4.12"

[target.'cfg(target_os = "linux")'.dependencies]
futures-lite = "2.6"
gio = "0.18"
zbus = "5.14"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = ["Data_Xml_Dom", "UI_Notifications"] }

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = { version = "2.4.0", features = ["deep-link"] }
tauri-plugin-updater = "2.10.0"

# macOS: show notification banners while app is frontmost (see vendor/mac-notification-sys/README.md)
[patch.crates-io]
mac-notification-sys = { path = "vendor/mac-notification-sys" }
